@@ -1,4 +1,4 @@
-package project.backend.common.auth.token;
+package project.backend.business.auth.implement;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
@@ -14,7 +14,6 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.crypto.spec.SecretKeySpec;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,11 +22,15 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
+import project.backend.business.auth.response.TokenServiceResponse;
 import project.backend.common.auth.oauth.KakaoUserDetails;
+import project.backend.repository.auth.BlacklistTokenRedisRepository;
 
 @Slf4j
 @Component
 public class TokenProvider {
+
+  private final BlacklistTokenRedisRepository blacklistTokenRedisRepository;
 
   private static final String AUTH_ID = "ID";
   private static final String AUTH_KEY = "AUTHORITY";
@@ -39,10 +42,12 @@ public class TokenProvider {
 
   public TokenProvider(@Value("${jwt.secret_key}") String secretKey,
       @Value("${jwt.access_expirations}") long accessExpirations,
-      @Value("${jwt.refresh_expirations}") long refreshExpirations) {
+      @Value("${jwt.refresh_expirations}") long refreshExpirations,
+      BlacklistTokenRedisRepository blacklistTokenRedisRepository) {
     this.secretKey = secretKey;
     this.accessExpirations = accessExpirations * 1000;
     this.refreshExpirations = refreshExpirations * 1000;
+    this.blacklistTokenRedisRepository = blacklistTokenRedisRepository;
   }
 
   @PostConstruct
@@ -51,7 +56,7 @@ public class TokenProvider {
     this.key = new SecretKeySpec(keyBytes, "HmacSHA256");
   }
 
-  public TokenResponse createToken(String userId, String email, String role) {
+  public TokenServiceResponse createToken(String userId, String email, String role) {
     long now = (new Date()).getTime();
 
     Date accessValidity = new Date(now + this.accessExpirations);
@@ -73,7 +78,7 @@ public class TokenProvider {
                               .setExpiration(refreshValidity)
                               .compact();
 
-    return TokenResponse.of(accessToken, refreshToken);
+    return TokenServiceResponse.of(accessToken, refreshToken);
   }
 
   public Authentication getAuthentication(String token) {
@@ -89,7 +94,7 @@ public class TokenProvider {
 
     List<? extends GrantedAuthority> simpleGrantedAuthorities = authorities.stream()
                                                                            .map(SimpleGrantedAuthority::new)
-                                                                           .collect(Collectors.toList());
+                                                                           .toList();
 
     KakaoUserDetails principal = new KakaoUserDetails(Long.parseLong((String) claims.get(AUTH_ID)),
         (String) claims.get(AUTH_EMAIL),
@@ -104,13 +109,27 @@ public class TokenProvider {
           .setSigningKey(key)
           .build()
           .parseClaimsJws(token);
-      return true;
+
+      // 블랙리스트에 있는지 확인
+      boolean isBlacklisted = blacklistTokenRedisRepository.existsById(token);
+      return !isBlacklisted;
     } catch (SecurityException | MalformedJwtException | UnsupportedJwtException |
              IllegalArgumentException e) {
       return false;
     } catch (ExpiredJwtException e) {
-      return true;
+      return true; // 만료된 토큰도 블랙리스트에 있을 수 있으므로 true 반환
     }
+  }
+
+  // 토큰의 남은 만료 시간 계산 메서드
+  public long getExpiration(String token) {
+    Claims claims = Jwts.parserBuilder()
+                        .setSigningKey(key)
+                        .build()
+                        .parseClaimsJws(token)
+                        .getBody();
+    Date expiration = claims.getExpiration();
+    return expiration.getTime() - System.currentTimeMillis();
   }
 
   public boolean validateExpired(String token) {
